# supabase-auth-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  error.rs  lib.rs  models.rs
tests/: client_tests.rs
