[package]
name = "supabase-auth"
authors = ["Eric Biggs"]
description = "Supabase Auth implementation following the official client libraries."
readme = "README.md"
version = "0.10.10"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["supabase", "supabase-auth", "authentication", "auth"]
categories = ["authentication", "database"]
homepage = "https://supabase.com"
repository = "https://github.com/proziam/supabase-auth-rs"

[features]
default = ["reqwest/default-tls"]
use-rustls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.9", default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "2.0.3"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v7"] }
tokio = { version = "1.39.3", features = ["full"] }
